Movies-Review-Service: New service and tests

--- a/movies-review-service/build.gradle
+++ b/movies-review-service/build.gradle
@@ -31,7 +31,7 @@ dependencies {
 
 	//test
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo'
+	testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo' // for testing Mongo without real DB
 	testImplementation 'io.projectreactor:reactor-test'
 }
 
